--- a/444-usabillionaires/BusStop/res/values/strings.xml
+++ b/444-usabillionaires/BusStop/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="button_favorites">View Favorites</string>
     <string name="button_history">View History</string>
     <string name="text_plan_trip">Select which route you would like to take</string>
-    <string name="text_browse">Select the route you would like to know more about</string>
+    <string name="text_browse">Select the bus stop you would like to know more about</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="hello_world">Hello world!</string>
