--- a/444-usabillionaires/BusStop/res/values/strings.xml
+++ b/444-usabillionaires/BusStop/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="title_activity_fav_history">FavHistoryActivity</string>
     <string name="title_activity_favorites">FavoritesActivity</string>
     <string name="title_activity_reuse_trip">ReuseTripActivity</string>
+    <string name="test">Test</string>
     
 </resources>
