--- a/444-usabillionaires/BusStop/res/values/strings.xml
+++ b/444-usabillionaires/BusStop/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="button_fav_hist">Favorites/History</string>
     <string name="button_favorites">View Favorites</string>
     <string name="button_history">View History</string>
-    <string name="edit_text_trip_name">Current Trip</string>
+    <string name="edit_text_trip_name">Enter Trip Name Here</string>
     <string name="plan_trip_fav">Fav</string>
     <string name="plan_trip_clear">Clear</string>
     <string name="plan_trip_destination">Available destinations:</string>
@@ -29,7 +29,7 @@
     <string name="button_return">Return</string>
     <string name="text_save_to_favs">Save this trip to Favorites</string>
     <string name="text_plan_trip">Select which route you would like to take</string>
-    <string name="text_browse">Select the bus stop you would like to know more about</string>
+    <string name="text_browse">Select the bus stop you would like to know more about and then select the route you would like to take</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="hello_world">Hello world!</string>
